--- a/01 - Introducción a la Programación/Preliminares - 01.ipynb
+++ b/01 - Introducción a la Programación/Preliminares - 01.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +22,7 @@
     }
    ],
    "source": [
-    "a = 'Hola '\n",
+    "a = 'Holaaa '\n",
     "b = 'Mundo !'\n",
     "print(a + b)"
    ]
@@ -222,6 +223,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -564,7 +566,7 @@
     }
    ],
    "source": [
-    " mi_tupla.count('Rojo')"
+    "mi_tupla.count('Rojo')"
    ]
   },
   {
@@ -915,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
